[package]
name = "rusty-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
# three-d = "0.13.0"
three-d = { git = "https://github.com/asny/three-d" }
three-d-asset = {git="https://github.com/asny/three-d-asset", features = ["obj", "png", "jpeg", "http"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
